--- a/services/build.gradle
+++ b/services/build.gradle
@@ -14,9 +14,10 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
+
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
-//	implementation 'com.h2database:h2'
 //	implementation 'javax.persistence:javax.persistence-api:2.2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
